fixed main.css to stretch background

--- a/assets/main.css
+++ b/assets/main.css
@@ -8,6 +8,7 @@ div#page-bg{
   width:100%;
   top: 0;
   left: 0;
+  background-size:100%;
 }
 
 div.page-content{
